fix: adjust image(not visible before) on product listing page, cart layout, and on all user pages, exacpt orders page, adjust cart layout page, apply css on payment success page, get product and show product image on cart view, fix and add redirection links to user dashboard(after addeing it to profile drop down) fix layout of product details page(images, buttons, input fields, text, and heading), add separate css for nav icons

--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -167,6 +167,7 @@
 .Error-div-center img {
   height: 450px;
   object-fit: contain;
+  margin: 0 auto;
   @media screen and (max-width: 500px) {
     height: 350px;
   }
