--- a/frontend/src/styles/cartlayout.css
+++ b/frontend/src/styles/cartlayout.css
@@ -51,7 +51,7 @@
   flex-shrink: 0;
 }
 .cart-image-cont img {
-  object-fit: contain;
+  object-fit: cover;
   width: 100%;
   height: 100%;
   border-radius: 15%;
