--- a/frontend/src/styles/products.css
+++ b/frontend/src/styles/products.css
@@ -1,11 +1,11 @@
 .search_header {
-  background-image: url("../images/1.jpg");
+  background-image: url("../images/store-banner.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   align-items: flex-start;
   text-align: initial;
-  margin-top: 70px;
+  margin-top: 64px;
 }
 .searchForm {
   width: 43%;
